/**
* MIT License
*
* Copyright (c) 2025 Sonardyne International Limited
*
* Permission is hereby granted, free of charge, to any person obtaining a copy
* of this software and associated documentation files (the "Software"), to deal
* in the Software without restriction, including without limitation the rights
* to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
* copies of the Software, and to permit persons to whom the Software is
* furnished to do so, subject to the following conditions:
*
* The above copyright notice and this permission notice shall be included in all
* copies or substantial portions of the Software.
*
* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
* IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
* FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
* AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
* LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
* OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
* SOFTWARE.
*/

syntax = "proto3";

import "sonardyne/api/algorithms/dvl_algorithm/adcp_velocity_limit.proto";
import "sonardyne/api/algorithms/dvl_algorithm/dvl_water_track_parameters.proto";
import "sonardyne/api/common/bounded_values/bounded_double.proto";
import "sonardyne/api/common/bounded_values/bounded_uint32.proto";

package sonardyne.api.algorithms.dvl_algorithm;

// DvlAdcpParameters provides configuration for DVL and ADCP operation, including
// measurement cell settings, ping averaging, ADCP velocity limits, and DVL water track parameters.
message DvlAdcpParameters {
  optional sonardyne.api.common.bounded_values.BoundedUInt32 number_of_cells              = 1;  // Number of vertical measurement bins used in profiling.
  optional sonardyne.api.common.bounded_values.BoundedDouble preferred_cell_width_metres  = 2;  // Desired size of each measurement cell, in metres.
  optional sonardyne.api.common.bounded_values.BoundedUInt32 pings_to_average             = 3;  // Number of pings averaged to produce one velocity profile.
  optional sonardyne.api.common.bounded_values.BoundedUInt32 dvl_adcp_ping_ratio          = 4;  // Ratio of DVL to ADCP pings when both modes operate together.
  optional AdcpVelocityLimit velocity_limit                                               = 5;  // Velocity range setting for ADCP measurements.
  optional DvlWaterTrackParameters water_track_parameters                                 = 6;  // Water track parameters specific to the DVL.
}
