/**
* MIT License
*
* Copyright (c) 2025 Sonardyne International Limited
*
* Permission is hereby granted, free of charge, to any person obtaining a copy
* of this software and associated documentation files (the "Software"), to deal
* in the Software without restriction, including without limitation the rights
* to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
* copies of the Software, and to permit persons to whom the Software is
* furnished to do so, subject to the following conditions:
*
* The above copyright notice and this permission notice shall be included in all
* copies or substantial portions of the Software.
*
* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
* IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
* FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
* AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
* LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
* OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
* SOFTWARE.
*/

syntax = "proto3";

import "sonardyne/api/algorithms/dvl_algorithm/dvl_adcp_parameters.proto";
import "sonardyne/api/algorithms/dvl_algorithm/dvl_input_trigger_parameters.proto";
import "sonardyne/api/algorithms/dvl_algorithm/dvl_mode.proto";
import "sonardyne/api/algorithms/dvl_algorithm/dvl_rate.proto";
import "sonardyne/api/common/unique_id.proto";

package sonardyne.api.algorithms.dvl_algorithm;

// DvlAlgorithmConfiguration provides configuration for a DVL algorithm, including
// update rate, Doppler mode, input trigger settings, and ADCP-related parameters.
message DvlAlgorithmConfiguration {
  sonardyne.api.common.UniqueID uid                           = 1;  // Unique identifier for this DVL algorithm instance.
  optional DvlRate dvl_rate                                   = 2;  // Maximum update rate of the DVL algorithm. Ignored if input trigger edge set to rising or falling.
  optional DvlMode dvl_mode                                   = 3;  // Operating mode of the DVL (e.g., DVL, ADCP, or combined).
  optional DvlInputTriggerParameters input_trigger_parameters = 4;  // Input trigger configuration controlling measurement timing.
  optional DvlAdcpParameters adcp_parameters                  = 5;  // ADCP-related parameters for ADCP or DVL+ADCP operation.
}
