/**
* MIT License
*
* Copyright (c) 2025 Sonardyne International Limited
*
* Permission is hereby granted, free of charge, to any person obtaining a copy
* of this software and associated documentation files (the "Software"), to deal
* in the Software without restriction, including without limitation the rights
* to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
* copies of the Software, and to permit persons to whom the Software is
* furnished to do so, subject to the following conditions:
*
* The above copyright notice and this permission notice shall be included in all
* copies or substantial portions of the Software.
*
* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
* IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
* FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
* AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
* LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
* OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
* SOFTWARE.
*/

syntax = "proto3";

import "sonardyne/api/common/bounded_values/bounded_double.proto";
import "sonardyne/api/common/ports/trigger_port/trigger_edge.proto";
import "sonardyne/api/common/ports/trigger_port/trigger_port_reference.proto";

package sonardyne.api.algorithms.dvl_algorithm;

// DvlInputTriggerParameters provides configuration for the input trigger controlling
// DVL acoustic transmissions, including the trigger port and any transmission delay.
message DvlInputTriggerParameters {
  optional sonardyne.api.common.ports.trigger_port.TriggerPortReference input_trigger_port  = 1;  // Port used to trigger the DVL's acoustic transmission.
  optional sonardyne.api.common.ports.trigger_port.TriggerEdge input_trigger_edge           = 2;  // Trigger edge to listen for.
  optional sonardyne.api.common.bounded_values.BoundedDouble input_trigger_delay_seconds    = 3;  // Delay (in seconds) before transmitting after a trigger pulse.
}
