/**
* MIT License
*
* Copyright (c) 2025 Sonardyne International Limited
*
* Permission is hereby granted, free of charge, to any person obtaining a copy
* of this software and associated documentation files (the "Software"), to deal
* in the Software without restriction, including without limitation the rights
* to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
* copies of the Software, and to permit persons to whom the Software is
* furnished to do so, subject to the following conditions:
*
* The above copyright notice and this permission notice shall be included in all
* copies or substantial portions of the Software.
*
* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
* IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
* FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
* AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
* LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
* OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
* SOFTWARE.
*/

syntax = "proto3";


package sonardyne.api.algorithms.dvl_algorithm;

// DvlMode provides the configuration for the Doppler operating mode of the device.
message DvlMode {
  enum DvlModeEnum {
    DVL_MODE_ENUM_UNSPECIFIED                         = 0;  // Unspecified DVL mode.
    DVL_MODE_ENUM_DVL                                 = 1;  // Standard DVL mode for velocity measurements.
    DVL_MODE_ENUM_ADCP                                = 2;  // Acoustic Doppler Current Profiler (ADCP) mode for water current profiling.
    DVL_MODE_ENUM_DVL_ADCP                            = 3;  // Combined DVL and ADCP operation mode.
  }

  DvlModeEnum value                                   = 1;  // Selected DVL operating mode.
  repeated DvlModeEnum valid_values                   = 2;  // List of valid modes supported by the device or configuration.
}
