/**
* MIT License
*
* Copyright (c) 2025 Sonardyne International Limited
*
* Permission is hereby granted, free of charge, to any person obtaining a copy
* of this software and associated documentation files (the "Software"), to deal
* in the Software without restriction, including without limitation the rights
* to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
* copies of the Software, and to permit persons to whom the Software is
* furnished to do so, subject to the following conditions:
*
* The above copyright notice and this permission notice shall be included in all
* copies or substantial portions of the Software.
*
* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
* IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
* FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
* AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
* LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
* OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
* SOFTWARE.
*/

syntax = "proto3";


package sonardyne.api.algorithms.dvl_algorithm;

// DvlRate provides configuration for the DVL update rate, including the selected
// scheduling rate and all supported rate options.
message DvlRate {
  enum DvlRateEnum {
    DVL_RATE_ENUM_UNSPECIFIED                         = 0;  // Unspecified DVL rate.
    DVL_RATE_ENUM_MAX_RATE                            = 1;  // Operate at the maximum supported update rate.
    DVL_RATE_ENUM_FIXED_1HZ                           = 2;  // Fixed 1 Hz update rate.
    DVL_RATE_ENUM_FIXED_2HZ                           = 3;  // Fixed 2 Hz update rate.
    DVL_RATE_ENUM_FIXED_5HZ                           = 4;  // Fixed 5 Hz update rate.
    DVL_RATE_ENUM_FIXED_10HZ                          = 5;  // Fixed 10 Hz update rate.
    DVL_RATE_ENUM_FIXED_15HZ                          = 6;  // Fixed 15 Hz update rate.
    DVL_RATE_ENUM_FIXED_20HZ                          = 7;  // Fixed 20 Hz update rate.
  }

  DvlRateEnum value                                   = 1;  // Selected DVL scheduling rate.
  repeated DvlRateEnum valid_values                   = 2;  // List of all supported DVL rate options.
}
