/**
* MIT License
*
* Copyright (c) 2025 Sonardyne International Limited
*
* Permission is hereby granted, free of charge, to any person obtaining a copy
* of this software and associated documentation files (the "Software"), to deal
* in the Software without restriction, including without limitation the rights
* to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
* copies of the Software, and to permit persons to whom the Software is
* furnished to do so, subject to the following conditions:
*
* The above copyright notice and this permission notice shall be included in all
* copies or substantial portions of the Software.
*
* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
* IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
* FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
* AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
* LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
* OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
* SOFTWARE.
*/

syntax = "proto3";


package sonardyne.api.common.ports.trigger_port;

// TriggerEdge enumerates the types of signal edges that can trigger an event.
// It indicates whether the trigger occurs on a rising edge, falling edge,
// both edges, or is unspecified.
enum TriggerEdge {

  TRIGGER_EDGE_UNSPECIFIED                        = 0;  // Unspecified trigger edge.
  TRIGGER_EDGE_NONE                               = 1;  // No trigger edge.
  TRIGGER_EDGE_RISING                             = 2;  // Rising trigger edge.
  TRIGGER_EDGE_FALLING                            = 3;  // Falling trigger edge.
  TRIGGER_EDGE_BOTH                               = 4;  // Rising and falling trigger edge.
};
